# seco

./: CMakeLists.txt  README.md
include/: seco.hpp
src/: main.cpp  seco.cpp  servercontrol.cpp  servercontrol.hpp
